--- a/tugas2/index.html
+++ b/tugas2/index.html
@@ -1,1 +1,50 @@
+<!DOCTYPE html>
+<html lang="id">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>MBKM ITERA</title>
 
+</head>
+<body>
+
+    <header>
+        <h1>MBKM ITERA</h1>
+        <img src="logo-Kampus-Merdeka.png" alt="Logo Kampus Merdeka" width="400">
+    </header>
+
+    <nav>
+        <ul>
+            <li><a href="index.html">Beranda</a></li>
+            <li><a href="program.html">Program</a></li>
+            <li><a href="berita.html">Berita</a></li>
+            <li><a href="#kontak">Kontak</a></li>
+        </ul>
+    </nav>
+
+    <main>
+        <section>
+            <h2>Program MBKM ITERA</h2>
+            <p>Merdeka Belajar Kampus Merdeka (MBKM) ITERA memberikan kesempatan bagi mahasiswa untuk mengembangkan potensi di luar kampus.</p>
+            <p><a href="program.html">Pelajari Lebih Lanjut</a></p>
+        </section>
+
+        <section>
+            <h2>Tentang MBKM</h2>
+            <p>Program MBKM bertujuan untuk memberikan pengalaman belajar yang fleksibel bagi mahasiswa dengan berbagai skema seperti magang, pertukaran pelajar, dan proyek desa.</p>
+        </section>
+    </main>
+    
+    <section id="kontak">
+        <h3>Kontak</h3>
+        <p>Email: <a href="mailto:mbkm@itera.ac.id">mbkm@itera.ac.id</a></p>
+        <p>Telepon: +62 721 8030188</p>
+        <p>Alamat: Institut Teknologi Sumatera, Lampung, Indonesia</p>
+    </section>
+
+    <footer>
+        <p>&copy; 2025 MBKM ITERA</p>
+    </footer>
+
+</body>
+</html>
