--- a/tugas2/berita.html
+++ b/tugas2/berita.html
@@ -9,8 +9,8 @@
             border: 1px solid black;
             border-collapse: collapse;
             padding: 8px;
-          }
-      </style>
+        }
+    </style>
 </head>
 <body>
 
@@ -29,6 +29,7 @@
 
 <main>
     <section>
+        <h2>Daftar Berita</h2> <!-- Heading yang ditambahkan -->
         <article>
             <h2>Optimalisasi Program MBKM</h2>
             <h3>Fakultas Sains ITERA Jalin Sinergi dengan FMIPA UNY dan BRIN</h3>
